--- a/Loop/Info.plist
+++ b/Loop/Info.plist
@@ -37,7 +37,7 @@
 	<false/>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
-		<string>spike</string>
+		<string>spikeapp</string>
 		<string>dexcomshare</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
